tests/specs/ecosystem/chzky/fp/0_5_2.test
chzky/fp/0.5.2
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:dayjs@1.11.9": "npm:dayjs@1.11.9",
      "npm:rxjs@7.8.1": "npm:rxjs@7.8.1",
      "npm:zod@3.22.2": "npm:zod@3.22.2"
    },
    "npm": {
      "dayjs@1.11.9": {
        "integrity": "sha512-QvzAURSbQ0pKdIye2txOzNaHmxtUBXerpY0FJsFXUMKbIZeFm5ht1LS/jFsrncjnmtv8HsG0W2g6c0zUjZWmpA==",
        "dependencies": {}
      },
      "rxjs@7.8.1": {
        "integrity": "sha512-AA3TVj+0A2iuIoQkWEK/tqFjBq2j+6PO6Y0zJcvzLAFhEFIO3HL0vls9hWLncZbAAbK0mar7oZ4V079I/qPMxg==",
        "dependencies": {
          "tslib": "tslib@2.6.2"
        }
      },
      "tslib@2.6.2": {
        "integrity": "sha512-AEYxH93jGFPn/a2iVAwW87VuUIkR1FVUKB77NwMF7nBTDkDrrT/Hpt/IrCJ0QXhW27jTBDcf5ZY7w6RiqTMw2Q==",
        "dependencies": {}
      },
      "zod@3.22.2": {
        "integrity": "sha512-wvWkphh5WQsJbVk1tbx1l1Ly4yg+XecD+Mq280uBGt9wa5BKSWf4Mhp6GmrkPixhMxmabYY7RbzlwVP32pbGCg==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /lib/TypeClass/Either.ts:51:7
   | 
51 | const leftback = <T>(val: T) => {
   |       ^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: functions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /lib/TypeClass/Either.ts:54:7
   | 
54 | const rightback = <T>(val: T) => {
   |       ^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: functions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


